<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SortingChar" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tmC-Vm-p7m">
                                <rect key="frame" x="188" y="73" width="225" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="inputField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="225" id="GCg-IS-8Tx"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JuX-Q8-1mY">
                                <rect key="frame" x="251" y="128" width="99" height="30"/>
                                <color key="backgroundColor" red="0.90980392160000001" green="0.94117647059999998" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Sorting"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="99" id="r9N-v4-4NG"/>
                                </constraints>
                                <state key="normal" title="Sort"/>
                                <connections>
                                    <action selector="btnSortTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tti-D6-rQo"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ce8-Ba-wrF">
                                <rect key="frame" x="20" y="178" width="560" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="SortedCharText"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="Q7S-wD-6L0"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="JuX-Q8-1mY" firstAttribute="centerX" secondItem="tmC-Vm-p7m" secondAttribute="centerX" id="46f-Jp-ydZ"/>
                            <constraint firstItem="tmC-Vm-p7m" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="53" id="4ax-1q-EIT"/>
                            <constraint firstItem="JuX-Q8-1mY" firstAttribute="top" secondItem="tmC-Vm-p7m" secondAttribute="bottom" constant="25" id="SJJ-zj-Ipw"/>
                            <constraint firstAttribute="trailingMargin" secondItem="ce8-Ba-wrF" secondAttribute="trailing" id="TLA-43-5Ux"/>
                            <constraint firstItem="tmC-Vm-p7m" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Vp9-tY-t3X"/>
                            <constraint firstAttribute="leadingMargin" secondItem="ce8-Ba-wrF" secondAttribute="leading" id="Yyp-qx-lZU"/>
                            <constraint firstItem="ce8-Ba-wrF" firstAttribute="top" secondItem="JuX-Q8-1mY" secondAttribute="bottom" constant="20" id="kZe-4h-q5V"/>
                            <constraint firstItem="ce8-Ba-wrF" firstAttribute="centerX" secondItem="JuX-Q8-1mY" secondAttribute="centerX" id="l13-UV-tCQ"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="lblResult" destination="ce8-Ba-wrF" id="2p9-Dy-i43"/>
                        <outlet property="txtInputField" destination="tmC-Vm-p7m" id="YVa-TV-SI2"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="333" y="366"/>
        </scene>
    </scenes>
</document>
